cmake_minimum_required(VERSION 3.6)
project(ssl_md5)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        libft/count_words.c
        libft/ft_abs.c
        libft/ft_addprefix.c
        libft/ft_atoi.c
        libft/ft_bintodec.c
        libft/ft_bzero.c
        libft/ft_capitalize.c
        libft/ft_char_to_uint32.c
        libft/ft_charcount.c
        libft/ft_dectobin.c
        libft/ft_find_ret_char.c
        libft/ft_is_white_spaces.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_itoabase.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nextl.c
        libft/ft_nextspace.c
        libft/ft_nextword.c
        libft/ft_posintlen.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putintarr.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_putwchar.c
        libft/ft_putwstr.c
        libft/ft_sitoa.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtointarr.c
        libft/ft_strtransfer.c
        libft/ft_strtrim.c
        libft/ft_till_zero.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_uint32_to_chr.c
        libft/ft_uitoa.c
        libft/ft_uitoa_base.c
        libft/ft_wordcount.c
        libft/ft_wstrcpy.c
        libft/ft_wstrlen.c
        libft/ft_wstrsub.c
        libft/get_str_len.c
        libft/getnextline.c
        libft/getnextline.h
        libft/libft.h
        libft/num_append_fr.c
        libft2/count_words.c
        libft2/ft_abs.c
        libft2/ft_addprefix.c
        libft2/ft_atoi.c
        libft2/ft_bintodec.c
        libft2/ft_bzero.c
        libft2/ft_capitalize.c
        libft2/ft_charcount.c
        libft2/ft_dectobin.c
        libft2/ft_find_ret_char.c
        libft2/ft_is_white_spaces.c
        libft2/ft_isalnum.c
        libft2/ft_isalpha.c
        libft2/ft_isascii.c
        libft2/ft_isdigit.c
        libft2/ft_islower.c
        libft2/ft_isprint.c
        libft2/ft_isupper.c
        libft2/ft_itoa.c
        libft2/ft_itoabase.c
        libft2/ft_lstadd.c
        libft2/ft_lstdel.c
        libft2/ft_lstdelone.c
        libft2/ft_lstiter.c
        libft2/ft_lstmap.c
        libft2/ft_lstnew.c
        libft2/ft_memalloc.c
        libft2/ft_memccpy.c
        libft2/ft_memchr.c
        libft2/ft_memcmp.c
        libft2/ft_memcpy.c
        libft2/ft_memdel.c
        libft2/ft_memmove.c
        libft2/ft_memset.c
        libft2/ft_nextl.c
        libft2/ft_nextspace.c
        libft2/ft_nextword.c
        libft2/ft_posintlen.c
        libft2/ft_pow.c
        libft2/ft_putchar.c
        libft2/ft_putchar_fd.c
        libft2/ft_putendl.c
        libft2/ft_putendl_fd.c
        libft2/ft_putintarr.c
        libft2/ft_putnbr.c
        libft2/ft_putnbr_fd.c
        libft2/ft_putstr.c
        libft2/ft_putstr_fd.c
        libft2/ft_putwchar.c
        libft2/ft_putwstr.c
        libft2/ft_sitoa.c
        libft2/ft_sqrt.c
        libft2/ft_strcat.c
        libft2/ft_strchr.c
        libft2/ft_strclr.c
        libft2/ft_strcmp.c
        libft2/ft_strcpy.c
        libft2/ft_strdel.c
        libft2/ft_strdup.c
        libft2/ft_strequ.c
        libft2/ft_striter.c
        libft2/ft_striteri.c
        libft2/ft_strjoin.c
        libft2/ft_strlcat.c
        libft2/ft_strlen.c
        libft2/ft_strmap.c
        libft2/ft_strmapi.c
        libft2/ft_strncat.c
        libft2/ft_strncmp.c
        libft2/ft_strncpy.c
        libft2/ft_strndup.c
        libft2/ft_strnequ.c
        libft2/ft_strnew.c
        libft2/ft_strnstr.c
        libft2/ft_strrchr.c
        libft2/ft_strsplit.c
        libft2/ft_strstr.c
        libft2/ft_strsub.c
        libft2/ft_strtointarr.c
        libft2/ft_strtrim.c
        libft2/ft_till_zero.c
        libft2/ft_tolower.c
        libft2/ft_toupper.c
        libft2/ft_uitoa.c
        libft2/ft_uitoabase.c
        libft2/ft_wordcount.c
        libft2/ft_wstrcpy.c
        libft2/ft_wstrlen.c
        libft2/ft_wstrsub.c
        libft2/get_str_len.c
        libft2/getnextline.c
        libft2/getnextline.h
        libft2/libft.h
        check_err.c
        constants.c
        constants.h
        extern.h
        flags.c
        ft_ssl.h
        input_args.c
        main.c
        md5.c
        md5_rounds.c
        padding.c
        structs.c
        testssl.c)

add_executable(ssl_md5 ${SOURCE_FILES})